# integrations-extras

elastic_siren/: CHANGELOG.md  README.md  manifest.json  metadata.csv  pyproject.toml  setup.py
elastic_siren/assets/: service_checks.json
elastic_siren/assets/configuration/: spec.yaml
elastic_siren/datadog_checks/elastic_siren/: __about__.py  __init__.py  config.py  elastic_siren.py  metrics.py
elastic_siren/datadog_checks/elastic_siren/config_models/: defaults.py  instance.py  validators.py
elastic_siren/datadog_checks/elastic_siren/data/: auto_conf.yaml  conf.yaml.example
elastic_siren/tests/: conftest.py  test_config.py  test_elastic_siren.py
